remove model interfaces

--- a/SortAPI/src/client/result.html
+++ b/SortAPI/src/client/result.html
@@ -1,1 +1,83 @@
-{"array":[-10,1,2,10000],"time":34682}
+<!doctype html><html lang="en"><head><title>HTTP Status 500 – Internal Server Error</title><style type="text/css">H1 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;} H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;} H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;} BODY {font-family:Tahoma,Arial,sans-serif;color:black;background-color:white;} B {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;} P {font-family:Tahoma,Arial,sans-serif;background:white;color:black;font-size:12px;}A {color : black;}A.name {color : black;}HR {color : #525D76;}</style></head><body><h1>HTTP Status 500 – Internal Server Error</h1><hr class="line" /><p><b>Type</b> Exception Report</p><p><b>Message</b> javax.ws.rs.ProcessingException: Error deserializing object from entity stream.</p><p><b>Description</b> The server encountered an unexpected condition that prevented it from fulfilling the request.</p><p><b>Exception</b> <pre>javax.servlet.ServletException: javax.ws.rs.ProcessingException: Error deserializing object from entity stream.
+	org.glassfish.jersey.servlet.WebComponent.serviceImpl(WebComponent.java:432)
+	org.glassfish.jersey.servlet.WebComponent.service(WebComponent.java:370)
+	org.glassfish.jersey.servlet.ServletContainer.service(ServletContainer.java:389)
+	org.glassfish.jersey.servlet.ServletContainer.service(ServletContainer.java:342)
+	org.glassfish.jersey.servlet.ServletContainer.service(ServletContainer.java:229)
+	org.apache.tomcat.websocket.server.WsFilter.doFilter(WsFilter.java:52)
+</pre></p><p><b>Root Cause</b> <pre>javax.ws.rs.ProcessingException: Error deserializing object from entity stream.
+	org.glassfish.jersey.jsonb.internal.JsonBindingProvider.readFrom(JsonBindingProvider.java:101)
+	org.glassfish.jersey.message.internal.ReaderInterceptorExecutor$TerminalReaderInterceptor.invokeReadFrom(ReaderInterceptorExecutor.java:257)
+	org.glassfish.jersey.message.internal.ReaderInterceptorExecutor$TerminalReaderInterceptor.aroundReadFrom(ReaderInterceptorExecutor.java:236)
+	org.glassfish.jersey.message.internal.ReaderInterceptorExecutor.proceed(ReaderInterceptorExecutor.java:156)
+	org.glassfish.jersey.server.internal.MappableExceptionWrapperInterceptor.aroundReadFrom(MappableExceptionWrapperInterceptor.java:73)
+	org.glassfish.jersey.message.internal.ReaderInterceptorExecutor.proceed(ReaderInterceptorExecutor.java:156)
+	org.glassfish.jersey.message.internal.MessageBodyFactory.readFrom(MessageBodyFactory.java:1091)
+	org.glassfish.jersey.message.internal.InboundMessageContext.readEntity(InboundMessageContext.java:874)
+	org.glassfish.jersey.server.ContainerRequest.readEntity(ContainerRequest.java:271)
+	org.glassfish.jersey.server.internal.inject.EntityParamValueParamProvider$EntityValueSupplier.apply(EntityParamValueParamProvider.java:97)
+	org.glassfish.jersey.server.internal.inject.EntityParamValueParamProvider$EntityValueSupplier.apply(EntityParamValueParamProvider.java:80)
+	org.glassfish.jersey.server.spi.internal.ParamValueFactoryWithSource.apply(ParamValueFactoryWithSource.java:74)
+	org.glassfish.jersey.server.spi.internal.ParameterValueHelper.getParameterValues(ParameterValueHelper.java:92)
+	org.glassfish.jersey.server.model.internal.JavaResourceMethodDispatcherProvider$AbstractMethodParamInvoker.getParamValues(JavaResourceMethodDispatcherProvider.java:133)
+	org.glassfish.jersey.server.model.internal.JavaResourceMethodDispatcherProvider$TypeOutInvoker.doDispatch(JavaResourceMethodDispatcherProvider.java:243)
+	org.glassfish.jersey.server.model.internal.AbstractJavaResourceMethodDispatcher.dispatch(AbstractJavaResourceMethodDispatcher.java:103)
+	org.glassfish.jersey.server.model.ResourceMethodInvoker.invoke(ResourceMethodInvoker.java:493)
+	org.glassfish.jersey.server.model.ResourceMethodInvoker.apply(ResourceMethodInvoker.java:415)
+	org.glassfish.jersey.server.model.ResourceMethodInvoker.apply(ResourceMethodInvoker.java:104)
+	org.glassfish.jersey.server.ServerRuntime$1.run(ServerRuntime.java:277)
+	org.glassfish.jersey.internal.Errors$1.call(Errors.java:272)
+	org.glassfish.jersey.internal.Errors$1.call(Errors.java:268)
+	org.glassfish.jersey.internal.Errors.process(Errors.java:316)
+	org.glassfish.jersey.internal.Errors.process(Errors.java:298)
+	org.glassfish.jersey.internal.Errors.process(Errors.java:268)
+	org.glassfish.jersey.process.internal.RequestScope.runInScope(RequestScope.java:289)
+	org.glassfish.jersey.server.ServerRuntime.process(ServerRuntime.java:256)
+	org.glassfish.jersey.server.ApplicationHandler.handle(ApplicationHandler.java:703)
+	org.glassfish.jersey.servlet.WebComponent.serviceImpl(WebComponent.java:416)
+	org.glassfish.jersey.servlet.WebComponent.service(WebComponent.java:370)
+	org.glassfish.jersey.servlet.ServletContainer.service(ServletContainer.java:389)
+	org.glassfish.jersey.servlet.ServletContainer.service(ServletContainer.java:342)
+	org.glassfish.jersey.servlet.ServletContainer.service(ServletContainer.java:229)
+	org.apache.tomcat.websocket.server.WsFilter.doFilter(WsFilter.java:52)
+</pre></p><p><b>Root Cause</b> <pre>javax.json.bind.JsonbException: Can't infer a type for unmarshalling into: shared.InputModelInterface
+	org.eclipse.yasson.internal.serializer.DeserializerBuilder.build(DeserializerBuilder.java:138)
+	org.eclipse.yasson.internal.Unmarshaller.deserializeItem(Unmarshaller.java:56)
+	org.eclipse.yasson.internal.Unmarshaller.deserialize(Unmarshaller.java:50)
+	org.eclipse.yasson.internal.JsonBinding.deserialize(JsonBinding.java:45)
+	org.eclipse.yasson.internal.JsonBinding.fromJson(JsonBinding.java:85)
+	org.glassfish.jersey.jsonb.internal.JsonBindingProvider.readFrom(JsonBindingProvider.java:99)
+	org.glassfish.jersey.message.internal.ReaderInterceptorExecutor$TerminalReaderInterceptor.invokeReadFrom(ReaderInterceptorExecutor.java:257)
+	org.glassfish.jersey.message.internal.ReaderInterceptorExecutor$TerminalReaderInterceptor.aroundReadFrom(ReaderInterceptorExecutor.java:236)
+	org.glassfish.jersey.message.internal.ReaderInterceptorExecutor.proceed(ReaderInterceptorExecutor.java:156)
+	org.glassfish.jersey.server.internal.MappableExceptionWrapperInterceptor.aroundReadFrom(MappableExceptionWrapperInterceptor.java:73)
+	org.glassfish.jersey.message.internal.ReaderInterceptorExecutor.proceed(ReaderInterceptorExecutor.java:156)
+	org.glassfish.jersey.message.internal.MessageBodyFactory.readFrom(MessageBodyFactory.java:1091)
+	org.glassfish.jersey.message.internal.InboundMessageContext.readEntity(InboundMessageContext.java:874)
+	org.glassfish.jersey.server.ContainerRequest.readEntity(ContainerRequest.java:271)
+	org.glassfish.jersey.server.internal.inject.EntityParamValueParamProvider$EntityValueSupplier.apply(EntityParamValueParamProvider.java:97)
+	org.glassfish.jersey.server.internal.inject.EntityParamValueParamProvider$EntityValueSupplier.apply(EntityParamValueParamProvider.java:80)
+	org.glassfish.jersey.server.spi.internal.ParamValueFactoryWithSource.apply(ParamValueFactoryWithSource.java:74)
+	org.glassfish.jersey.server.spi.internal.ParameterValueHelper.getParameterValues(ParameterValueHelper.java:92)
+	org.glassfish.jersey.server.model.internal.JavaResourceMethodDispatcherProvider$AbstractMethodParamInvoker.getParamValues(JavaResourceMethodDispatcherProvider.java:133)
+	org.glassfish.jersey.server.model.internal.JavaResourceMethodDispatcherProvider$TypeOutInvoker.doDispatch(JavaResourceMethodDispatcherProvider.java:243)
+	org.glassfish.jersey.server.model.internal.AbstractJavaResourceMethodDispatcher.dispatch(AbstractJavaResourceMethodDispatcher.java:103)
+	org.glassfish.jersey.server.model.ResourceMethodInvoker.invoke(ResourceMethodInvoker.java:493)
+	org.glassfish.jersey.server.model.ResourceMethodInvoker.apply(ResourceMethodInvoker.java:415)
+	org.glassfish.jersey.server.model.ResourceMethodInvoker.apply(ResourceMethodInvoker.java:104)
+	org.glassfish.jersey.server.ServerRuntime$1.run(ServerRuntime.java:277)
+	org.glassfish.jersey.internal.Errors$1.call(Errors.java:272)
+	org.glassfish.jersey.internal.Errors$1.call(Errors.java:268)
+	org.glassfish.jersey.internal.Errors.process(Errors.java:316)
+	org.glassfish.jersey.internal.Errors.process(Errors.java:298)
+	org.glassfish.jersey.internal.Errors.process(Errors.java:268)
+	org.glassfish.jersey.process.internal.RequestScope.runInScope(RequestScope.java:289)
+	org.glassfish.jersey.server.ServerRuntime.process(ServerRuntime.java:256)
+	org.glassfish.jersey.server.ApplicationHandler.handle(ApplicationHandler.java:703)
+	org.glassfish.jersey.servlet.WebComponent.serviceImpl(WebComponent.java:416)
+	org.glassfish.jersey.servlet.WebComponent.service(WebComponent.java:370)
+	org.glassfish.jersey.servlet.ServletContainer.service(ServletContainer.java:389)
+	org.glassfish.jersey.servlet.ServletContainer.service(ServletContainer.java:342)
+	org.glassfish.jersey.servlet.ServletContainer.service(ServletContainer.java:229)
+	org.apache.tomcat.websocket.server.WsFilter.doFilter(WsFilter.java:52)
+</pre></p><p><b>Note</b> The full stack trace of the root cause is available in the server logs.</p><hr class="line" /><h3>Apache Tomcat/7.0.91</h3></body></html>
